tests/src/frontend/typechecking/invalid/shadowing_in_fun_default.sk
fun f1(
  f: Int = {
    x = 1;
    x = 2;
    x
  },
): void {
  void
}
